Improve generation of CDS archive